@@ -21,6 +21,12 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue that caused wrong results to be returned for global
+    aggregation on ``JOINS`` when literal expression in ``WHERE`` clause is
+    evaluated to false. E.g.::
+
+      SELECT COUNT(*) FROM t1, t2 WHERE 1=2
+
  - Fixed an issue which resulted in an exception when using the same global
    aggregation symbol twice as a select item on a join query.
 
